--- a/src/index.css
+++ b/src/index.css
@@ -12,5 +12,6 @@
   --font-family-poppins: 'Poppins', sans-serif;
   --font-family-montserrat : 'montserrat ', sans-serif;
   --font-family-urbanist : 'urbanist ', sans-serif;
-   
+  --font-family-exo : 'exo ', sans-serif;
+    
 }
